# Sequence-Generator

./: ANSWER.md  CMakeLists.txt  Dockerfile  README.md  main.cpp
include/seq_storage/: seq_storage.hxx  sequence.hxx
include/server/: client.hxx  general.hxx  server.hxx
include/utils/: constants.hxx  task_handler.hxx
source/seq_storage/: seq_storage.cxx  sequence.cxx
source/server/: client.cxx  server.cxx
test/: main.py  test_constants.py
